--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -6,51 +6,13 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.njzjz.chemicaltools.TitleActivity">
-
-        <Button
-        android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-        android:id="@+id/openMassButton"
-        android:onClick="openMass"
-        android:longClickable="false"
-            android:maxWidth="500dp"
-            android:layout_below="@+id/openElementButton"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:text="@string/button_mass"/>
-
-        <Button
-            android:layout_height="wrap_content"
-            android:id="@+id/openElementButton"
-            android:onClick="openElement"
-            android:longClickable="false"
-            android:layout_width="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="@string/button_element" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/openExamButton"
-            android:onClick="openExam"
-            android:longClickable="false"
-            android:maxWidth="500dp"
-            android:layout_below="@+id/openMassButton"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:text="@string/button_exam"/>
-    </RelativeLayout>
+        tools:context="com.yasinyildirim.cardlayout.CardLayoutActivity"
+        tools:ignore="MergeRootFrame" />
 
     <!-- The navigation drawer -->
         <ListView
