--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -491,15 +491,15 @@
         <item>From the Greek oxy-, both sharp and acid, and -gen, meaning acid-forming</item>
         <item>The Latin fluere, to flow</item>
         <item>The Greek neos, meaning new</item>
-        <item>The English word soda (natrium in Latin)[3]</item>
+        <item>The English word soda (natrium in Latin)</item>
         <item>Magnesia, a district of Eastern Thessalyin Greece</item>
         <item>From alumina, a compound (originally aluminum)</item>
         <item>From the Latin silex, flint (originally silicium)</item>
         <item>The Greek phoosphoros, carrying light</item>
-        <item>The Latin sulphur, fire and brimstone[5]</item>
+        <item>The Latin sulphur, fire and brimstone</item>
         <item>The Greek chloros, greenish yellow</item>
         <item>The Greek argos, idle</item>
-        <item>New Latin potassa, potash (kalium in Latin)[3]</item>
+        <item>New Latin potassa, potash (kalium in Latin)</item>
         <item>The Latin calx, lime</item>
         <item>Scandia, the Latin name for Scandinavia</item>
         <item>Titans, the sons of the Earth goddess of Greek mythology</item>
@@ -554,7 +554,7 @@
         <item>Lutetia, the Latin name for Paris</item>
         <item>Hafnia, the New Latin name for Copenhagen</item>
         <item>King Tantalus, father of Niobe from Greek mythology</item>
-        <item>The Swedish tung sten, heavy stone (W is wolfram, the old name of the tungsten mineral wolframite)[3]</item>
+        <item>The Swedish tung sten, heavy stone (W is wolfram, the old name of the tungsten mineral wolframite)</item>
         <item>Rhenus, the Latin name for the river Rhine</item>
         <item>The Greek osmè, meaning smell</item>
         <item>Iris, the Greek goddess of the rainbow</item>
@@ -562,7 +562,7 @@
         <item>English word (aurum in Latin)</item>
         <item>The New Latin name mercurius, named after the Roman god (Hg from former name hydrargyrum, from Greek hydr-, water, and argyros, silver)</item>
         <item>The Greek thallos, green twig</item>
-        <item>English word (plumbum in Latin)[3]</item>
+        <item>English word (plumbum in Latin)</item>
         <item>German word, now obsolete</item>
         <item>Polonia, the New Latin name for Poland</item>
         <item>The Greek astatos, unstable</item>
