add element pictures collected by DENG Lingxue

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -600,4 +600,124 @@
         <item>In recognition of the contribution of the Tennessee region</item>
         <item>Honoring a scientist and recognizes Professor Yuri Oganessian</item>
     </string-array>
+    <string-array name="elementPictureArray">
+        <item>@drawable/element_1</item>
+        <item>@drawable/element_2</item>
+        <item>@drawable/element_3</item>
+        <item>@drawable/element_4</item>
+        <item>@drawable/element_5</item>
+        <item>@drawable/element_6</item>
+        <item>@drawable/element_7</item>
+        <item>@drawable/element_8</item>
+        <item>@drawable/element_9</item>
+        <item>@drawable/element_10</item>
+        <item>@drawable/element_11</item>
+        <item>@drawable/element_12</item>
+        <item>@drawable/element_13</item>
+        <item>@drawable/element_14</item>
+        <item>@drawable/element_15</item>
+        <item>@drawable/element_16</item>
+        <item>@drawable/element_17</item>
+        <item>@drawable/element_18</item>
+        <item>@drawable/element_19</item>
+        <item>@drawable/element_20</item>
+        <item>@drawable/element_21</item>
+        <item>@drawable/element_22</item>
+        <item>@drawable/element_23</item>
+        <item>@drawable/element_24</item>
+        <item>@drawable/element_25</item>
+        <item>@drawable/element_26</item>
+        <item>@drawable/element_27</item>
+        <item>@drawable/element_28</item>
+        <item>@drawable/element_29</item>
+        <item>@drawable/element_30</item>
+        <item>@drawable/element_31</item>
+        <item>@drawable/element_32</item>
+        <item>@drawable/element_33</item>
+        <item>@drawable/element_34</item>
+        <item>@drawable/element_35</item>
+        <item>@drawable/element_36</item>
+        <item>@drawable/element_37</item>
+        <item>@drawable/element_38</item>
+        <item>@drawable/element_39</item>
+        <item>@drawable/element_40</item>
+        <item>@drawable/element_41</item>
+        <item>@drawable/element_42</item>
+        <item>@drawable/element_43</item>
+        <item>@drawable/element_44</item>
+        <item>@drawable/element_45</item>
+        <item>@drawable/element_46</item>
+        <item>@drawable/element_47</item>
+        <item>@drawable/element_48</item>
+        <item>@drawable/element_49</item>
+        <item>@drawable/element_50</item>
+        <item>@drawable/element_51</item>
+        <item>@drawable/element_52</item>
+        <item>@drawable/element_53</item>
+        <item>@drawable/element_54</item>
+        <item>@drawable/element_55</item>
+        <item>@drawable/element_56</item>
+        <item>@drawable/element_57</item>
+        <item>@drawable/element_58</item>
+        <item>@drawable/element_59</item>
+        <item>@drawable/element_60</item>
+        <item>@drawable/element_61</item>
+        <item>@drawable/element_62</item>
+        <item>@drawable/element_63</item>
+        <item>@drawable/element_64</item>
+        <item>@drawable/element_65</item>
+        <item>@drawable/element_66</item>
+        <item>@drawable/element_67</item>
+        <item>@drawable/element_68</item>
+        <item>@drawable/element_69</item>
+        <item>@drawable/element_70</item>
+        <item>@drawable/element_71</item>
+        <item>@drawable/element_72</item>
+        <item>@drawable/element_73</item>
+        <item>@drawable/element_74</item>
+        <item>@drawable/element_75</item>
+        <item>@drawable/element_76</item>
+        <item>@drawable/element_77</item>
+        <item>@drawable/element_78</item>
+        <item>@drawable/element_79</item>
+        <item>@drawable/element_80</item>
+        <item>@drawable/element_81</item>
+        <item>@drawable/element_82</item>
+        <item>@drawable/element_83</item>
+        <item>@drawable/element_84</item>
+        <item>@drawable/element_85</item>
+        <item>@drawable/element_86</item>
+        <item>@drawable/element_87</item>
+        <item>@drawable/element_88</item>
+        <item>@drawable/element_89</item>
+        <item>@drawable/element_90</item>
+        <item>@drawable/element_91</item>
+        <item>@drawable/element_92</item>
+        <item>@drawable/element_93</item>
+        <item>@drawable/element_94</item>
+        <item>@drawable/element_95</item>
+        <item>@drawable/element_96</item>
+        <item>@drawable/element_97</item>
+        <item>@drawable/element_98</item>
+        <item>@drawable/element_99</item>
+        <item>@drawable/element_100</item>
+        <item>@drawable/element_101</item>
+        <item>@drawable/element_102</item>
+        <item>@drawable/element_103</item>
+        <item>@drawable/element_104</item>
+        <item>@drawable/element_105</item>
+        <item>@drawable/element_106</item>
+        <item>@drawable/element_107</item>
+        <item>@drawable/element_108</item>
+        <item>@drawable/element_109</item>
+        <item>@drawable/element_110</item>
+        <item>@drawable/element_111</item>
+        <item>@drawable/element_112</item>
+        <item>@drawable/element_113</item>
+        <item>@drawable/element_114</item>
+        <item>@drawable/element_115</item>
+        <item>@drawable/element_116</item>
+        <item>@drawable/element_117</item>
+        <item>@drawable/element_118</item>
+    </string-array>
 </resources>
