--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,12 +15,12 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:background="@android:color/background_light"
         android:weightSum="1"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
         <RelativeLayout
             android:id="@+id/relativeLayout1"
             android:layout_width="match_parent"
@@ -48,16 +49,33 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
         </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/relativeLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/elementTextview"
             android:layout_weight="0.06"
+            android:layout_marginTop="11dp"
             android:text="@string/elementTextview_name"
             android:textSize="18dp"
             android:textColor="@color/abc_primary_text_material_light"
             android:scrollbars="vertical"
-            />
+            android:layout_toEndOf="@+id/elementImage"
+            android:layout_toRightOf="@+id/elementImage"
+            android:layout_marginLeft="10dp"/>
+
+            <ImageView
+                android:id="@+id/elementImage"
+                android:layout_width="115dp"
+                android:scaleType="centerCrop"
+                android:layout_height="155dp"
+                android:layout_alignTop="@+id/elementTextview"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
