--- a/app/src/main/res/xml/settings_general.xml
+++ b/app/src/main/res/xml/settings_general.xml
@@ -17,32 +17,12 @@
             android:summaryOn="@string/setting_examOptionModeOn"
             android:summaryOff="@string/setting_examOptionModeOff"/>
     </PreferenceCategory>
-    <!-- 示例 !-->
-    <!--
-        <PreferenceCategory android:title="Post">
-            <ListPreference android:title="Post Limit"
-                android:defaultValue="10"
-                android:entryValues="@array/settings_entry_values_post_limit"
-                android:entries="@array/settings_entries_post_limit"/>
-
-            <ListPreference android:title="Preview Image Quality"
-                android:defaultValue="0"
-                android:key="preview_image"
-                android:entryValues="@array/settings_entry_values_preview_image_size"
-                android:entries="@array/settings_entries_image_size"/>
-
-            <ListPreference android:title="Download Image Quality"
-                android:defaultValue="2"
-                android:key="download_image"
-                android:entryValues="@array/settings_entry_values_preview_image_size"
-                android:entries="@array/settings_entries_image_size"/>
-
-            <CheckBoxPreference android:title="Safe Mode"
-                android:defaultValue="true"
-                android:summaryOn="You are now under protected"
-                android:summaryOff="Warning! You may need be more careful!"/>
-        </PreferenceCategory>
-    !-->
+    <PreferenceCategory android:title="@string/button_acid">
+        <EditTextPreference android:title="pKw"
+            android:key="pKw"
+            android:defaultValue="14">
+        </EditTextPreference>
+    </PreferenceCategory>
     <PreferenceCategory android:title="@string/setting_others">
         <PreferenceScreen android:title="@string/setting_clearSettings"
             android:key="clearSettings">
@@ -52,10 +32,6 @@
         </PreferenceScreen>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/button_About">
-
-        <PreferenceScreen android:title="@string/button_About"
-            android:key="about">
-        </PreferenceScreen>
         <PreferenceScreen
             android:title="@string/setting_rate"
             android:summary="@string/setting_rate_sum">
@@ -69,6 +45,15 @@
             <intent
                 android:action="android.intent.action.VIEW"
                 android:data="mailto:njzjz@msn.com?subject=Chemical Tools App Feedback"/>
+        </PreferenceScreen>
+        <PreferenceScreen android:title="@string/setting_website"
+            android:summary="http://chem.njzjz.win/">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="http://chem.njzjz.win/"/>
+        </PreferenceScreen>
+        <PreferenceScreen android:title="@string/button_About"
+            android:key="about">
         </PreferenceScreen>
     </PreferenceCategory>
 </PreferenceScreen>
