--- a/app/src/main/res/layout/activity_acid.xml
+++ b/app/src/main/res/layout/activity_acid.xml
@@ -12,20 +12,39 @@
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        <EditText
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+        <LinearLayout
+            style="?android:attr/buttonBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/acidText_pK"
-            android:imeOptions="actionSend"
-            android:inputType="text"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.06"
-            android:maxLines="1"
-            android:hint="@string/acidpK_name"
-            android:layout_toRightOf="@+id/switchAB"
-            android:layout_toEndOf="@+id/switchAB" />
+            android:layout_toRightOf="@+id/switchAB" >
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/acidText_name"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.4"
+                android:maxLines="1"
+                android:hint="@string/acidname"
+                android:drawableRight="@drawable/numberpicker_down_normal_holo_light"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/acidText_pK"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.4"
+                android:maxLines="1"
+                android:hint="@string/acidpKa"
+                />
+        </LinearLayout>
         <Switch
 
             android:layout_width="wrap_content"
@@ -34,11 +53,10 @@
             android:textOff="@string/acid_name"
             android:textOn="@string/base_name"
             android:showText="true"
+            android:allowUndo="false"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:allowUndo="false"
-            android:autoText="false" />
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/relativeLayout2"
@@ -67,8 +85,9 @@
             android:layout_weight="0.06"
             android:maxLines="1"
             android:hint="@string/acidc_name"
-            android:layout_toLeftOf="@+id/acidButton"
-            android:layout_toStartOf="@+id/acidButton" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
     <TextView
