--- a/app/src/main/res/xml/settings_general.xml
+++ b/app/src/main/res/xml/settings_general.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <PreferenceCategory android:title="@string/button_user">
+        <PreferenceScreen android:title="@string/button_login" android:key="login"/>
+    </PreferenceCategory>
     <PreferenceCategory android:title="@string/button_exam">
         <ListPreference android:title="@string/setting_mode"
             android:key="examMode"
