--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -527,7 +527,7 @@
         <item>Ruthenia, the New Latin name for Russia</item>
         <item>The Greek rhodos, meaning rose coloured</item>
         <item>The then recently discovered asteroid Pallas, considered a planet at the time</item>
-        <item>English word (argentum in Latin)[3]</item>
+        <item>English word (argentum in Latin)</item>
         <item>The New Latin cadmia, from King Kadmos</item>
         <item>Indigo</item>
         <item>English word (stannum in Latin)</item>
