更新主页布局

--- a/app/src/main/res/layout/activity_gas.xml
+++ b/app/src/main/res/layout/activity_gas.xml
@@ -23,7 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:checkedButton="@+id/radioButton_p">
+        android:checkedButton="@+id/radioButton_p"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <RadioButton
             android:text="p"
